<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/root_layout_map"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true"
    tools:context=".views.map.MapActivity">

    <!--    Navigation bar -->
    <com.google.android.material.appbar.MaterialToolbar
        android:id="@+id/toolbar_search_map"
        android:layout_width="0dp"
        android:layout_height="?attr/actionBarSize"
        android:background="?attr/colorPrimary"
        android:elevation="4dp"
        android:theme="@style/ToolbarTheme"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:navigationIconTint="?attr/customColorValue"
        app:popupTheme="@style/ThemeOverlay.AppCompat.DayNight"
        app:title="@string/find_location"
        app:titleTextColor="?attr/customColorValue" />

    <org.osmdroid.views.MapView
        android:id="@+id/mapView"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/toolbar_search_map" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/searchLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="12dp"
        android:layout_marginTop="12dp"
        android:background="@drawable/rounded_bg"
        app:endIconMode="clear_text"
        app:endIconTint="?attr/colorPrimary"
        app:hintEnabled="false"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/toolbar_search_map"
        app:startIconDrawable="@drawable/ic_search"
        app:startIconTint="?attr/colorPrimary">

        <AutoCompleteTextView
            android:id="@+id/searchEditText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@android:color/transparent"
            android:completionThreshold="3"
            android:hint="@string/hintFindLocation"
            android:imeOptions="actionSearch"
            android:inputType="text"
            android:paddingHorizontal="12dp" />
    </com.google.android.material.textfield.TextInputLayout>

    <Button
        android:id="@+id/searchButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="12dp"
        android:layout_marginEnd="8dp"
        android:background="@drawable/btn_delete"
        android:minHeight="50dp"
        android:text="@string/search"
        android:textColor="?attr/customColorValue"
        android:textStyle="bold"
        app:layout_constraintEnd_toStartOf="@+id/confirmButton"
        app:layout_constraintTop_toBottomOf="@+id/searchLayout" />

    <Button
        android:id="@+id/confirmButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="12dp"
        android:layout_marginEnd="12dp"
        android:background="@drawable/btn_delete"
        android:minHeight="50dp"
        android:text="@string/confirm_btn"
        android:textColor="?attr/customColorValue"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/searchLayout" />

</androidx.constraintlayout.widget.ConstraintLayout>
