...

            <EditText
                android:id="@+id/eventTitle2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="18dp"
                android:autofillHints="eventTitle"
                android:backgroundTint="?attr/colorPrimary"
                android:ems="10"
                android:hint="@string/hintTitle"
                android:inputType="textPersonName"
                android:minHeight="48dp"
                android:paddingStart="8dp"
...
                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="vertical">

                        <TextView
                            android:id="@+id/advOptions2"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginStart="4dp"
                            android:drawablePadding="8dp"
                            android:elevation="8dp"
                            android:paddingVertical="10dp"
...
                                android:paddingVertical="8dp"
                                android:text="@string/from"
                                app:layout_constraintStart_toStartOf="parent"
                                app:layout_constraintTop_toTopOf="parent" />

                            <TextView
                                android:id="@+id/startTime2"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_marginTop="32dp"
                                android:contentDescription="@string/startTime"
                                android:focusable="false"
                                android:paddingVertical="8dp"
                                android:textColor="?attr/colorOnPrimary"
                                app:layout_constraintStart_toStartOf="@+id/guideline7"
                                app:layout_constraintTop_toTopOf="parent" />

                            <TextView
                                android:id="@+id/startDate2"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_marginTop="32dp"
                                android:contentDescription="@string/startDate"
                                android:focusable="false"
                                android:paddingVertical="8dp"
                                android:textColor="?attr/colorOnPrimary"
                                app:layout_constraintEnd_toStartOf="@+id/guideline7"
                                app:layout_constraintStart_toStartOf="@+id/guideline6"
                                app:layout_constraintTop_toTopOf="parent" />

                            <TextView
                                android:id="@+id/endDate2"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:contentDescription="@string/endTime"
                                android:focusable="false"
                                android:paddingVertical="8dp"
                                android:paddingBottom="16dp"
                                android:textColor="?attr/colorOnPrimary"
                                app:layout_constraintBottom_toBottomOf="@+id/txtTo2"
                                app:layout_constraintEnd_toStartOf="@+id/guideline7"
...
                                android:text="@string/to"
                                app:layout_constraintBottom_toTopOf="@+id/allDaySw2"
                                app:layout_constraintStart_toStartOf="parent"
                                app:layout_constraintTop_toBottomOf="@+id/txtFrom2" />

                            <TextView
                                android:id="@+id/endTime2"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:contentDescription="@string/endTime"
                                android:focusable="false"
                                android:paddingVertical="8dp"
                                android:paddingBottom="16dp"
...
