...
                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="vertical">

                        <TextView
                            android:id="@+id/advOptions"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginStart="4dp"
                            android:drawablePadding="8dp"
                            android:elevation="8dp"
                            android:paddingVertical="10dp"
...
                                android:textColor="?attr/colorOnPrimary"
                                app:layout_constraintEnd_toStartOf="@+id/guideline7"
                                app:layout_constraintStart_toStartOf="@+id/guideline6"
                                app:layout_constraintTop_toTopOf="parent" />

                            <TextView
                                android:id="@+id/endDate"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:contentDescription="@string/endTime"
                                android:focusable="false"
                                android:paddingVertical="8dp"
                                android:paddingBottom="16dp"
...

                    </LinearLayout>
                </LinearLayout>
            </androidx.cardview.widget.CardView>

            <Button
                android:id="@+id/btnAdd"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="24dp"
                android:background="@drawable/btn_delete"
                android:minHeight="50dp"
                android:text="@string/done"
...
