...
                    android:textColor="?attr/colorOnPrimary"
                    android:textSize="14sp" />
            </LinearLayout>
        </androidx.cardview.widget.CardView>

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/recyclerView"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layoutAnimation="@anim/layout_animation"
            android:clipToPadding="false"
            android:paddingTop="4dp"
            android:paddingBottom="30dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/sortBar" />

        <com.google.android.material.floatingactionbutton.ExtendedFloatingActionButton
            android:id="@+id/add_button"
            android:layout_width="wrap_content"
            android:layout_height="56dp"
            android:layout_marginEnd="58dp"
            android:layout_marginBottom="64dp"
            android:clickable="true"
            android:contentDescription="@string/add_item"
...
